@@ -1,3 +1,7 @@
+2004-05-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Fixed bug #955473 erroneous winico requirement
+
 2004-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Added /wiki command for Colin (the lazybones).
